--- a/src/HomePage.form
+++ b/src/HomePage.form
@@ -1,40 +1,207 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <form xmlns="http://www.intellij.com/uidesigner/form/" version="1" bind-to-class="HomePage">
-  <grid id="27dc6" binding="MainPane" layout-manager="BorderLayout" hgap="0" vgap="0">
+  <grid id="27dc6" binding="PaneMain" layout-manager="BorderLayout" hgap="0" vgap="0">
     <constraints>
-      <xy x="20" y="20" width="201" height="367"/>
+      <xy x="20" y="20" width="250" height="422"/>
     </constraints>
-    <properties/>
+    <properties>
+      <maximumSize width="250" height="500"/>
+      <minimumSize width="250" height="-1"/>
+      <preferredSize width="250" height="360"/>
+      <visible value="true"/>
+    </properties>
     <border type="none"/>
     <children>
       <tabbedpane id="50129" binding="Tabs">
         <constraints border-constraint="Center"/>
-        <properties/>
+        <properties>
+          <maximumSize width="250" height="-1"/>
+          <minimumSize width="250" height="-1"/>
+          <preferredSize width="250" height="-1"/>
+          <tabPlacement value="1"/>
+        </properties>
         <border type="none"/>
         <children>
-          <grid id="dd9b4" binding="HomePane" layout-manager="BorderLayout" hgap="0" vgap="0">
+          <grid id="dd9b4" binding="PaneHome" layout-manager="GridLayoutManager" row-count="10" column-count="1" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="10">
+            <margin top="0" left="0" bottom="0" right="0"/>
             <constraints>
               <tabbedpane title="Home"/>
             </constraints>
-            <properties/>
+            <properties>
+              <maximumSize width="250" height="-1"/>
+              <minimumSize width="250" height="-1"/>
+              <preferredSize width="250" height="410"/>
+              <visible value="false"/>
+            </properties>
             <border type="none"/>
-            <children/>
+            <children>
+              <component id="25f3e" class="javax.swing.JLabel" binding="LabelRemaining">
+                <constraints>
+                  <grid row="1" column="0" row-span="1" col-span="1" vsize-policy="3" hsize-policy="3" anchor="0" fill="0" indent="0" use-parent-layout="false"/>
+                </constraints>
+                <properties>
+                  <text value="距下次休息还有"/>
+                </properties>
+              </component>
+              <component id="728af" class="javax.swing.JButton" binding="ButRemaining">
+                <constraints>
+                  <grid row="2" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="1" anchor="0" fill="0" indent="0" use-parent-layout="false">
+                    <minimum-size width="200" height="-1"/>
+                    <preferred-size width="200" height="50"/>
+                    <maximum-size width="-1" height="50"/>
+                  </grid>
+                </constraints>
+                <properties>
+                  <font name="Arial" size="28"/>
+                  <horizontalTextPosition value="0"/>
+                  <margin top="0" left="14" bottom="0" right="14"/>
+                  <minimumSize width="250" height="50"/>
+                  <preferredSize width="200" height="50"/>
+                  <text value="45:00"/>
+                  <toolTipText value="重新计时"/>
+                </properties>
+              </component>
+              <grid id="f3f4f" layout-manager="FlowLayout" hgap="5" vgap="5" flow-align="1">
+                <constraints>
+                  <grid row="4" column="0" row-span="1" col-span="1" vsize-policy="3" hsize-policy="3" anchor="0" fill="0" indent="0" use-parent-layout="false"/>
+                </constraints>
+                <properties/>
+                <border type="none"/>
+                <children>
+                  <component id="96a32" class="javax.swing.JLabel" binding="LabelSetting1">
+                    <constraints/>
+                    <properties>
+                      <text value="每隔"/>
+                    </properties>
+                  </component>
+                  <component id="2ca5e" class="javax.swing.JTextField" binding="textInterval">
+                    <constraints/>
+                    <properties>
+                      <horizontalAlignment value="0"/>
+                      <preferredSize width="28" height="25"/>
+                      <text value="45"/>
+                    </properties>
+                  </component>
+                  <component id="2a79e" class="javax.swing.JLabel" binding="LabelSetting2">
+                    <constraints/>
+                    <properties>
+                      <text value="分钟休息"/>
+                    </properties>
+                  </component>
+                  <component id="2df92" class="javax.swing.JTextField" binding="textPeriod">
+                    <constraints/>
+                    <properties>
+                      <horizontalAlignment value="0"/>
+                      <preferredSize width="28" height="25"/>
+                      <text value="10"/>
+                    </properties>
+                  </component>
+                  <component id="1e7f4" class="javax.swing.JLabel" binding="LabelSetting3">
+                    <constraints/>
+                    <properties>
+                      <text value="分钟"/>
+                    </properties>
+                  </component>
+                  <component id="369df" class="javax.swing.JButton" binding="ButSet">
+                    <constraints/>
+                    <properties>
+                      <iconTextGap value="0"/>
+                      <margin top="0" left="0" bottom="0" right="0"/>
+                      <preferredSize width="40" height="33"/>
+                      <text value="设定"/>
+                    </properties>
+                  </component>
+                </children>
+              </grid>
+              <vspacer id="b1e87">
+                <constraints>
+                  <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="1" anchor="1" fill="0" indent="0" use-parent-layout="false">
+                    <preferred-size width="0" height="20"/>
+                  </grid>
+                </constraints>
+              </vspacer>
+              <vspacer id="d2d41">
+                <constraints>
+                  <grid row="3" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="1" anchor="1" fill="0" indent="0" use-parent-layout="false">
+                    <preferred-size width="0" height="15"/>
+                  </grid>
+                </constraints>
+              </vspacer>
+              <vspacer id="68329">
+                <constraints>
+                  <grid row="9" column="0" row-span="1" col-span="1" vsize-policy="6" hsize-policy="1" anchor="0" fill="2" indent="0" use-parent-layout="false">
+                    <preferred-size width="-1" height="15"/>
+                  </grid>
+                </constraints>
+              </vspacer>
+              <component id="8633a" class="javax.swing.JButton" binding="ButRestNow">
+                <constraints>
+                  <grid row="6" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="1" anchor="0" fill="0" indent="0" use-parent-layout="false">
+                    <preferred-size width="200" height="80"/>
+                  </grid>
+                </constraints>
+                <properties>
+                  <text value="立即休息"/>
+                </properties>
+              </component>
+              <vspacer id="85052">
+                <constraints>
+                  <grid row="5" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="1" anchor="1" fill="0" indent="0" use-parent-layout="false">
+                    <preferred-size width="0" height="15"/>
+                  </grid>
+                </constraints>
+              </vspacer>
+              <component id="bf08b" class="javax.swing.JLabel" binding="LabelSignature">
+                <constraints>
+                  <grid row="8" column="0" row-span="1" col-span="1" vsize-policy="3" hsize-policy="3" anchor="0" fill="0" indent="0" use-parent-layout="false"/>
+                </constraints>
+                <properties>
+                  <text value="休息休息 5.0   李翰辰"/>
+                </properties>
+              </component>
+              <vspacer id="a0ece">
+                <constraints>
+                  <grid row="7" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="1" anchor="1" fill="0" indent="0" use-parent-layout="false">
+                    <preferred-size width="0" height="15"/>
+                  </grid>
+                </constraints>
+              </vspacer>
+            </children>
           </grid>
-          <grid id="2dbd3" binding="HistoryPane" layout-manager="BorderLayout" hgap="0" vgap="0">
+          <grid id="2dbd3" binding="PaneHistory" layout-manager="GridLayoutManager" row-count="1" column-count="1" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
+            <margin top="0" left="0" bottom="0" right="0"/>
             <constraints>
               <tabbedpane title="History"/>
             </constraints>
             <properties/>
             <border type="none"/>
-            <children/>
+            <children>
+              <component id="64b98" class="javax.swing.JTable" binding="TableHistory">
+                <constraints>
+                  <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="6" hsize-policy="6" anchor="0" fill="0" indent="0" use-parent-layout="false">
+                    <preferred-size width="200" height="300"/>
+                  </grid>
+                </constraints>
+                <properties>
+                  <background color="-986896"/>
+                </properties>
+              </component>
+            </children>
           </grid>
-          <grid id="6540c" binding="GamePane" layout-manager="BorderLayout" hgap="0" vgap="0">
+          <grid id="6540c" binding="PaneGame" layout-manager="BorderLayout" hgap="0" vgap="0">
             <constraints>
               <tabbedpane title="Game"/>
             </constraints>
             <properties/>
             <border type="none"/>
-            <children/>
+            <children>
+              <component id="1a4e3" class="javax.swing.JTable" binding="TableGame">
+                <constraints border-constraint="Center"/>
+                <properties>
+                  <background color="-986896"/>
+                </properties>
+              </component>
+            </children>
           </grid>
         </children>
       </tabbedpane>
