--- a/src/HomePage.form
+++ b/src/HomePage.form
@@ -2,12 +2,12 @@
 <form xmlns="http://www.intellij.com/uidesigner/form/" version="1" bind-to-class="HomePage">
   <grid id="27dc6" binding="PaneMain" layout-manager="BorderLayout" hgap="0" vgap="0">
     <constraints>
-      <xy x="20" y="20" width="250" height="448"/>
+      <xy x="20" y="20" width="250" height="481"/>
     </constraints>
     <properties>
       <maximumSize width="250" height="500"/>
       <minimumSize width="250" height="-1"/>
-      <preferredSize width="250" height="450"/>
+      <preferredSize width="250" height="480"/>
       <visible value="true"/>
     </properties>
     <border type="none"/>
@@ -22,7 +22,7 @@
         </properties>
         <border type="none"/>
         <children>
-          <grid id="dd9b4" binding="PaneHome" layout-manager="GridLayoutManager" row-count="12" column-count="1" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="10">
+          <grid id="dd9b4" binding="PaneHome" layout-manager="GridLayoutManager" row-count="13" column-count="1" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="10">
             <margin top="0" left="0" bottom="0" right="0"/>
             <constraints>
               <tabbedpane title="Home"/>
@@ -31,7 +31,7 @@
               <maximumSize width="250" height="-1"/>
               <minimumSize width="250" height="-1"/>
               <preferredSize width="250" height="-1"/>
-              <visible value="false"/>
+              <visible value="true"/>
             </properties>
             <border type="none"/>
             <children>
@@ -129,7 +129,7 @@
               </vspacer>
               <vspacer id="68329">
                 <constraints>
-                  <grid row="11" column="0" row-span="1" col-span="1" vsize-policy="6" hsize-policy="1" anchor="0" fill="2" indent="0" use-parent-layout="false">
+                  <grid row="12" column="0" row-span="1" col-span="1" vsize-policy="6" hsize-policy="1" anchor="0" fill="2" indent="0" use-parent-layout="false">
                     <preferred-size width="-1" height="15"/>
                   </grid>
                 </constraints>
@@ -153,7 +153,7 @@
               </vspacer>
               <component id="bf08b" class="javax.swing.JLabel" binding="LabelSignature">
                 <constraints>
-                  <grid row="10" column="0" row-span="1" col-span="1" vsize-policy="3" hsize-policy="3" anchor="0" fill="0" indent="0" use-parent-layout="false"/>
+                  <grid row="11" column="0" row-span="1" col-span="1" vsize-policy="3" hsize-policy="3" anchor="0" fill="0" indent="0" use-parent-layout="false"/>
                 </constraints>
                 <properties>
                   <text value="休息休息 5.0   李翰辰"/>
@@ -161,27 +161,37 @@
               </component>
               <vspacer id="a0ece">
                 <constraints>
-                  <grid row="9" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="1" anchor="1" fill="0" indent="0" use-parent-layout="false">
+                  <grid row="10" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="1" anchor="1" fill="0" indent="0" use-parent-layout="false">
                     <preferred-size width="0" height="15"/>
                   </grid>
                 </constraints>
               </vspacer>
               <component id="115ed" class="javax.swing.JCheckBox" binding="checkFullScreen">
                 <constraints>
-                  <grid row="7" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="0" indent="0" use-parent-layout="false"/>
+                  <grid row="8" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="0" indent="0" use-parent-layout="false"/>
                 </constraints>
                 <properties>
-                  <margin top="20" left="2" bottom="2" right="2"/>
+                  <margin top="2" left="2" bottom="2" right="2"/>
                   <text value="全屏休息"/>
                 </properties>
               </component>
               <component id="4ff1b" class="javax.swing.JCheckBox" binding="checkCloseMonitor">
                 <constraints>
-                  <grid row="8" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="0" indent="0" use-parent-layout="false"/>
+                  <grid row="9" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="0" indent="0" use-parent-layout="false"/>
                 </constraints>
                 <properties>
                   <margin top="2" left="2" bottom="2" right="2"/>
                   <text value="关闭显示器"/>
+                </properties>
+              </component>
+              <component id="715f2" class="javax.swing.JCheckBox" binding="checkTimerOn">
+                <constraints>
+                  <grid row="7" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="0" indent="0" use-parent-layout="false"/>
+                </constraints>
+                <properties>
+                  <margin top="20" left="2" bottom="2" right="2"/>
+                  <selected value="true"/>
+                  <text value="自动休息"/>
                 </properties>
               </component>
             </children>
